--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <span class="moves">3</span> Moves  
             
-            <span class="timer"> hh:mm:ss</span>
+            <span class="timer"></span>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
