add modal to the game and styling it in css file and put som functions related to him

--- a/index.html
+++ b/index.html
@@ -81,6 +81,29 @@
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
+        <div class="modal">
+            <table>
+                <thead>
+                    <th colspan="2">
+                        <h1>Congratulations</h1>
+                    </th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><p>Total time</p></td>
+                        <td class="totalTime"></td>
+                    </tr>
+                    <tr>
+                        <td><p>Moves</p></td>
+                        <td class="totalMoves"></td>
+                    </tr>
+                    <tr>
+                        <td><p>Raiting</p></td>
+                        <td class="finalRaiting"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <script src="js/app.js"></script>
